--- a/2024/src/index.css
+++ b/2024/src/index.css
@@ -373,9 +373,20 @@ p{
   .announcement{
     width: 250vw;
   }
-  .supporters-logos img,.logos img{
+.logos img{
       width: fit-content;
       height: 60px;
+  }
+  .supporters-logos img{
+    width: fit-content;
+    height: 65px;
+  }
+  .supporters-logos{
+    gap: 2rem;
+    margin: 0 0.75rem;
+  }
+  .ga-0{
+    gap: 0 !important;
   }
   .carousel-inner img{
     height: 50vh;
