--- a/2024/src/assets/stylesheets/Themes.css
+++ b/2024/src/assets/stylesheets/Themes.css
@@ -13,10 +13,13 @@
   /* Grid layout for the images */
   .themes-grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* 2 columns for the theme grid */
+    grid-template-columns: repeat(2, 1fr);/* 2 columns for the theme grid*/
     gap: 20px;
   }
-  
+  @media (max-width: 768px) { 
+    .themes-grid{
+        grid-template-columns: repeat(1, 1fr);
+    }}
   .theme-item {
     text-align: center;
     position: relative;
