--- a/2024/src/assets/stylesheets/Themes.css
+++ b/2024/src/assets/stylesheets/Themes.css
@@ -30,8 +30,8 @@
   
   
   .theme-image {
-    max-width: 100%;
-    height: auto;
+    width: 100%;
+
     display: block;
     border-radius: 8px;
   }
