--- a/2024/src/index.css
+++ b/2024/src/index.css
@@ -4,6 +4,9 @@
 .lgreen{
   color:#1ab69d !important;
 }
+.KSoS{
+  background-color: #4b5563;
+}
 body{
   width: 100%;
   height: auto !important;
